Bug 413975 - GetCtx returning null does not mean we are an outer SVG. r=jwatt